// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tabs/demo/animated.md extend context correctly 1`] = `
Array [
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right:8px"
    >
      <button
        aria-checked="true"
        class="ant-switch ant-switch-checked"
        role="switch"
        type="button"
      >
        <div
          class="ant-switch-handle"
        />
        <span
          class="ant-switch-inner"
        >
          inkBar
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        aria-checked="true"
        class="ant-switch ant-switch-checked"
        role="switch"
        type="button"
      >
        <div
          class="ant-switch-handle"
        />
        <span
          class="ant-switch-inner"
        >
          tabPane
        </span>
      </button>
    </div>
  </div>,
  <div
    class="ant-tabs ant-tabs-top"
    items="[object Object],[object Object],[object Object]"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform:translate(0px, 0px)"
        >
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="null-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="null-more"
          style="visibility:hidden;order:1"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
        <div>
          <div
            class="ant-tabs-dropdown"
            style="opacity:0"
          >
            <ul
              aria-label="expanded dropdown"
              class="ant-tabs-dropdown-menu ant-tabs-dropdown-menu-root ant-tabs-dropdown-menu-vertical"
              data-menu-list="true"
              id="null-more-popup"
              role="listbox"
              tabindex="-1"
            />
            <div
              aria-hidden="true"
              style="display:none"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top ant-tabs-content-animated"
        style="margin-left:--100%"
      />
    </div>
  </div>,
]
`;

exports[`renders ./components/tabs/demo/basic.md extend context correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top"
  items="[object Object],[object Object],[object Object]"
>
  <div
    class="ant-tabs-nav"
    role="tablist"
  >
    <div
      class="ant-tabs-nav-wrap"
    >
      <div
        class="ant-tabs-nav-list"
        style="transform:translate(0px, 0px)"
      >
        <div
          class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
    >
      <button
        aria-controls="null-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-hidden="true"
        class="ant-tabs-nav-more"
        id="null-more"
        style="visibility:hidden;order:1"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
      <div>
        <div
          class="ant-tabs-dropdown"
          style="opacity:0"
        >
          <ul
            aria-label="expanded dropdown"
            class="ant-tabs-dropdown-menu ant-tabs-dropdown-menu-root ant-tabs-dropdown-menu-vertical"
            data-menu-list="true"
            id="null-more-popup"
            role="listbox"
            tabindex="-1"
          />
          <div
            aria-hidden="true"
            style="display:none"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content-holder"
  >
    <div
      class="ant-tabs-content ant-tabs-content-top"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/card.md extend context correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-card"
  items="[object Object],[object Object],[object Object]"
>
  <div
    class="ant-tabs-nav"
    role="tablist"
  >
    <div
      class="ant-tabs-nav-wrap"
    >
      <div
        class="ant-tabs-nav-list"
        style="transform:translate(0px, 0px)"
      >
        <div
          class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
    >
      <button
        aria-controls="null-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-hidden="true"
        class="ant-tabs-nav-more"
        id="null-more"
        style="visibility:hidden;order:1"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
      <div>
        <div
          class="ant-tabs-dropdown"
          style="opacity:0"
        >
          <ul
            aria-label="expanded dropdown"
            class="ant-tabs-dropdown-menu ant-tabs-dropdown-menu-root ant-tabs-dropdown-menu-vertical"
            data-menu-list="true"
            id="null-more-popup"
            role="listbox"
            tabindex="-1"
          />
          <div
            aria-hidden="true"
            style="display:none"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content-holder"
  >
    <div
      class="ant-tabs-content ant-tabs-content-top"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/card-top.md extend context correctly 1`] = `
<div
  class="card-container"
>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-card"
    items="[object Object],[object Object],[object Object]"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform:translate(0px, 0px)"
        >
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="null-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="null-more"
          style="visibility:hidden;order:1"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
        <div>
          <div
            class="ant-tabs-dropdown"
            style="opacity:0"
          >
            <ul
              aria-label="expanded dropdown"
              class="ant-tabs-dropdown-menu ant-tabs-dropdown-menu-root ant-tabs-dropdown-menu-vertical"
              data-menu-list="true"
              id="null-more-popup"
              role="listbox"
              tabindex="-1"
            />
            <div
              aria-hidden="true"
              style="display:none"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/centered.md extend context correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-centered"
  items="[object Object],[object Object],[object Object]"
>
  <div
    class="ant-tabs-nav"
    role="tablist"
  >
    <div
      class="ant-tabs-nav-wrap"
    >
      <div
        class="ant-tabs-nav-list"
        style="transform:translate(0px, 0px)"
      >
        <div
          class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
    >
      <button
        aria-controls="null-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-hidden="true"
        class="ant-tabs-nav-more"
        id="null-more"
        style="visibility:hidden;order:1"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
      <div>
        <div
          class="ant-tabs-dropdown"
          style="opacity:0"
        >
          <ul
            aria-label="expanded dropdown"
            class="ant-tabs-dropdown-menu ant-tabs-dropdown-menu-root ant-tabs-dropdown-menu-vertical"
            data-menu-list="true"
            id="null-more-popup"
            role="listbox"
            tabindex="-1"
          />
          <div
            aria-hidden="true"
            style="display:none"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content-holder"
  >
    <div
      class="ant-tabs-content ant-tabs-content-top"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/custom-add-trigger.md extend context correctly 1`] = `
<div>
  <div
    style="margin-bottom:16px"
  >
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        ADD
      </span>
    </button>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-editable ant-tabs-card ant-tabs-editable-card"
    items="[object Object],[object Object]"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform:translate(0px, 0px)"
        >
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="null-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="null-more"
          style="visibility:hidden;order:1"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
        <div>
          <div
            class="ant-tabs-dropdown"
            style="opacity:0"
          >
            <ul
              aria-label="expanded dropdown"
              class="ant-tabs-dropdown-menu ant-tabs-dropdown-menu-root ant-tabs-dropdown-menu-vertical"
              data-menu-list="true"
              id="null-more-popup"
              role="listbox"
              tabindex="-1"
            />
            <div
              aria-hidden="true"
              style="display:none"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/custom-tab-bar.md extend context correctly 1`] = `
<div>
  <div
    class="ant-tabs ant-tabs-top"
    items="[object Object],[object Object],[object Object]"
  >
    <div>
      <div />
      <div
        class="ant-tabs-nav site-custom-tab-bar"
        role="tablist"
      >
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-list"
            style="transform:translate(0px, 0px)"
          >
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
        <div
          class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
        >
          <button
            aria-controls="null-more-popup"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-hidden="true"
            class="ant-tabs-nav-more"
            id="null-more"
            style="visibility:hidden;order:1"
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="ellipsis"
              class="anticon anticon-ellipsis"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="ellipsis"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                />
              </svg>
            </span>
          </button>
          <div>
            <div
              class="ant-tabs-dropdown"
              style="opacity:0"
            >
              <ul
                aria-label="expanded dropdown"
                class="ant-tabs-dropdown-menu ant-tabs-dropdown-menu-root ant-tabs-dropdown-menu-vertical"
                data-menu-list="true"
                id="null-more-popup"
                role="listbox"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                style="display:none"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/custom-tab-bar-node.md extend context correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top"
  items="[object Object],[object Object],[object Object]"
>
  <div
    class="ant-tabs-nav"
    role="tablist"
  >
    <div
      class="ant-tabs-nav-wrap"
    >
      <div
        class="ant-tabs-nav-list"
        style="transform:translate(0px, 0px)"
      >
        <div
          class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
    >
      <button
        aria-controls="null-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-hidden="true"
        class="ant-tabs-nav-more"
        id="null-more"
        style="visibility:hidden;order:1"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
      <div>
        <div
          class="ant-tabs-dropdown"
          style="opacity:0"
        >
          <ul
            aria-label="expanded dropdown"
            class="ant-tabs-dropdown-menu ant-tabs-dropdown-menu-root ant-tabs-dropdown-menu-vertical"
            data-menu-list="true"
            id="null-more-popup"
            role="listbox"
            tabindex="-1"
          />
          <div
            aria-hidden="true"
            style="display:none"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content-holder"
  >
    <div
      class="ant-tabs-content ant-tabs-content-top"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/deprecated.md extend context correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top"
  items="[object Object],[object Object],[object Object]"
>
  <div
    class="ant-tabs-nav"
    role="tablist"
  >
    <div
      class="ant-tabs-nav-wrap"
    >
      <div
        class="ant-tabs-nav-list"
        style="transform:translate(0px, 0px)"
      >
        <div
          class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
    >
      <button
        aria-controls="null-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-hidden="true"
        class="ant-tabs-nav-more"
        id="null-more"
        style="visibility:hidden;order:1"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
      <div>
        <div
          class="ant-tabs-dropdown"
          style="opacity:0"
        >
          <ul
            aria-label="expanded dropdown"
            class="ant-tabs-dropdown-menu ant-tabs-dropdown-menu-root ant-tabs-dropdown-menu-vertical"
            data-menu-list="true"
            id="null-more-popup"
            role="listbox"
            tabindex="-1"
          />
          <div
            aria-hidden="true"
            style="display:none"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content-holder"
  >
    <div
      class="ant-tabs-content ant-tabs-content-top"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/disabled.md extend context correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top"
  items="[object Object],[object Object],[object Object]"
>
  <div
    class="ant-tabs-nav"
    role="tablist"
  >
    <div
      class="ant-tabs-nav-wrap"
    >
      <div
        class="ant-tabs-nav-list"
        style="transform:translate(0px, 0px)"
      >
        <div
          class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
    >
      <button
        aria-controls="null-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-hidden="true"
        class="ant-tabs-nav-more"
        id="null-more"
        style="visibility:hidden;order:1"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
      <div>
        <div
          class="ant-tabs-dropdown"
          style="opacity:0"
        >
          <ul
            aria-label="expanded dropdown"
            class="ant-tabs-dropdown-menu ant-tabs-dropdown-menu-root ant-tabs-dropdown-menu-vertical"
            data-menu-list="true"
            id="null-more-popup"
            role="listbox"
            tabindex="-1"
          />
          <div
            aria-hidden="true"
            style="display:none"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content-holder"
  >
    <div
      class="ant-tabs-content ant-tabs-content-top"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/editable-card.md extend context correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-editable ant-tabs-card ant-tabs-editable-card"
  items="[object Object],[object Object],[object Object]"
>
  <div
    class="ant-tabs-nav"
    role="tablist"
  >
    <div
      class="ant-tabs-nav-wrap"
    >
      <div
        class="ant-tabs-nav-list"
        style="transform:translate(0px, 0px)"
      >
        <button
          aria-label="Add tab"
          class="ant-tabs-nav-add"
          type="button"
        >
          <span
            aria-label="plus"
            class="anticon anticon-plus"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="plus"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <defs />
              <path
                d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
              />
              <path
                d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
              />
            </svg>
          </span>
        </button>
        <div
          class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
    >
      <button
        aria-controls="null-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-hidden="true"
        class="ant-tabs-nav-more"
        id="null-more"
        style="visibility:hidden;order:1"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
      <div>
        <div
          class="ant-tabs-dropdown"
          style="opacity:0"
        >
          <ul
            aria-label="expanded dropdown"
            class="ant-tabs-dropdown-menu ant-tabs-dropdown-menu-root ant-tabs-dropdown-menu-vertical"
            data-menu-list="true"
            id="null-more-popup"
            role="listbox"
            tabindex="-1"
          />
          <div
            aria-hidden="true"
            style="display:none"
          />
        </div>
      </div>
      <button
        aria-label="Add tab"
        class="ant-tabs-nav-add"
        type="button"
      >
        <span
          aria-label="plus"
          class="anticon anticon-plus"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="plus"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <defs />
            <path
              d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
            />
            <path
              d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-tabs-content-holder"
  >
    <div
      class="ant-tabs-content ant-tabs-content-top"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/extra.md extend context correctly 1`] = `
Array [
  <div
    class="ant-tabs ant-tabs-top"
    items="[object Object],[object Object],[object Object]"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform:translate(0px, 0px)"
        >
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="null-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="null-more"
          style="visibility:hidden;order:1"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
        <div>
          <div
            class="ant-tabs-dropdown"
            style="opacity:0"
          >
            <ul
              aria-label="expanded dropdown"
              class="ant-tabs-dropdown-menu ant-tabs-dropdown-menu-root ant-tabs-dropdown-menu-vertical"
              data-menu-list="true"
              id="null-more-popup"
              role="listbox"
              tabindex="-1"
            />
            <div
              aria-hidden="true"
              style="display:none"
            />
          </div>
        </div>
      </div>
      <div
        class="ant-tabs-extra-content"
      >
        <button
          class="ant-btn ant-btn-default"
          type="button"
        >
          <span>
            Extra Action
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      />
    </div>
  </div>,
  <br />,
  <br />,
  <br />,
  <div>
    You can also specify its direction or both side
  </div>,
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
  />,
  <div
    class="ant-checkbox-group"
  >
    <label
      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item"
    >
      <span
        class="ant-checkbox ant-checkbox-checked"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox"
          value="left"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        left
      </span>
    </label>
    <label
      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item"
    >
      <span
        class="ant-checkbox ant-checkbox-checked"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox"
          value="right"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        right
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-tabs ant-tabs-top"
    items="[object Object],[object Object],[object Object]"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-extra-content"
      >
        <button
          class="ant-btn ant-btn-default tabs-extra-demo-button"
          type="button"
        >
          <span>
            Left Extra Action
          </span>
        </button>
      </div>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform:translate(0px, 0px)"
        >
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="null-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="null-more"
          style="visibility:hidden;order:1"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
        <div>
          <div
            class="ant-tabs-dropdown"
            style="opacity:0"
          >
            <ul
              aria-label="expanded dropdown"
              class="ant-tabs-dropdown-menu ant-tabs-dropdown-menu-root ant-tabs-dropdown-menu-vertical"
              data-menu-list="true"
              id="null-more-popup"
              role="listbox"
              tabindex="-1"
            />
            <div
              aria-hidden="true"
              style="display:none"
            />
          </div>
        </div>
      </div>
      <div
        class="ant-tabs-extra-content"
      >
        <button
          class="ant-btn ant-btn-default"
          type="button"
        >
          <span>
            Right Extra Action
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      />
    </div>
  </div>,
]
`;

exports[`renders ./components/tabs/demo/icon.md extend context correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top"
  items="[object Object],[object Object]"
>
  <div
    class="ant-tabs-nav"
    role="tablist"
  >
    <div
      class="ant-tabs-nav-wrap"
    >
      <div
        class="ant-tabs-nav-list"
        style="transform:translate(0px, 0px)"
      >
        <div
          class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
    >
      <button
        aria-controls="null-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-hidden="true"
        class="ant-tabs-nav-more"
        id="null-more"
        style="visibility:hidden;order:1"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
      <div>
        <div
          class="ant-tabs-dropdown"
          style="opacity:0"
        >
          <ul
            aria-label="expanded dropdown"
            class="ant-tabs-dropdown-menu ant-tabs-dropdown-menu-root ant-tabs-dropdown-menu-vertical"
            data-menu-list="true"
            id="null-more-popup"
            role="listbox"
            tabindex="-1"
          />
          <div
            aria-hidden="true"
            style="display:none"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content-holder"
  >
    <div
      class="ant-tabs-content ant-tabs-content-top"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/nest.md extend context correctly 1`] = `
<div>
  <div
    class="ant-select ant-select-single ant-select-show-arrow"
    style="width:200px"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-search"
      >
        <input
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="ant-select-selection-search-input"
          readonly=""
          role="combobox"
          style="opacity:0"
          type="search"
          unselectable="on"
          value=""
        />
      </span>
      <span
        class="ant-select-selection-placeholder"
      />
    </div>
    <div>
      <div
        class="ant-select-dropdown"
        style="opacity:0"
      >
        <div>
          <div
            id="undefined_list"
            role="listbox"
            style="height:0;width:0;overflow:hidden"
          >
            <div
              aria-selected="false"
              id="undefined_list_0"
              role="option"
            >
              left
            </div>
            <div
              aria-selected="false"
              id="undefined_list_1"
              role="option"
            >
              right
            </div>
          </div>
          <div
            class="rc-virtual-list"
            style="position:relative"
          >
            <div
              class="rc-virtual-list-holder"
              style="max-height:256px;overflow-y:auto;overflow-anchor:none"
            >
              <div>
                <div
                  class="rc-virtual-list-holder-inner"
                  style="display:flex;flex-direction:column"
                >
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option ant-select-item-option-active"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      Parent - left
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select:none;-webkit-user-select:none"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      Parent - right
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select:none;-webkit-user-select:none"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      Parent - top
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select:none;-webkit-user-select:none"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      Parent - bottom
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select:none;-webkit-user-select:none"
                      unselectable="on"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      aria-hidden="true"
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <span
        aria-label="down"
        class="anticon anticon-down ant-select-suffix"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    class="ant-select ant-select-single ant-select-show-arrow"
    style="width:200px"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-search"
      >
        <input
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="ant-select-selection-search-input"
          readonly=""
          role="combobox"
          style="opacity:0"
          type="search"
          unselectable="on"
          value=""
        />
      </span>
      <span
        class="ant-select-selection-placeholder"
      />
    </div>
    <div>
      <div
        class="ant-select-dropdown"
        style="opacity:0"
      >
        <div>
          <div
            id="undefined_list"
            role="listbox"
            style="height:0;width:0;overflow:hidden"
          >
            <div
              aria-selected="false"
              id="undefined_list_0"
              role="option"
            >
              left
            </div>
            <div
              aria-selected="false"
              id="undefined_list_1"
              role="option"
            >
              right
            </div>
          </div>
          <div
            class="rc-virtual-list"
            style="position:relative"
          >
            <div
              class="rc-virtual-list-holder"
              style="max-height:256px;overflow-y:auto;overflow-anchor:none"
            >
              <div>
                <div
                  class="rc-virtual-list-holder-inner"
                  style="display:flex;flex-direction:column"
                >
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option ant-select-item-option-active"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      Child - left
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select:none;-webkit-user-select:none"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      Child - right
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select:none;-webkit-user-select:none"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      Child - top
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select:none;-webkit-user-select:none"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      Child - bottom
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select:none;-webkit-user-select:none"
                      unselectable="on"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      aria-hidden="true"
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <span
        aria-label="down"
        class="anticon anticon-down ant-select-suffix"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    class="ant-select ant-select-single ant-select-show-arrow"
    style="width:200px"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-search"
      >
        <input
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="ant-select-selection-search-input"
          readonly=""
          role="combobox"
          style="opacity:0"
          type="search"
          unselectable="on"
          value=""
        />
      </span>
      <span
        class="ant-select-selection-placeholder"
      />
    </div>
    <div>
      <div
        class="ant-select-dropdown"
        style="opacity:0"
      >
        <div>
          <div
            id="undefined_list"
            role="listbox"
            style="height:0;width:0;overflow:hidden"
          >
            <div
              aria-label="Parent - line"
              aria-selected="false"
              id="undefined_list_0"
              role="option"
            >
              line
            </div>
            <div
              aria-label="Parent - card"
              aria-selected="false"
              id="undefined_list_1"
              role="option"
            >
              card
            </div>
          </div>
          <div
            class="rc-virtual-list"
            style="position:relative"
          >
            <div
              class="rc-virtual-list-holder"
              style="max-height:256px;overflow-y:auto;overflow-anchor:none"
            >
              <div>
                <div
                  class="rc-virtual-list-holder-inner"
                  style="display:flex;flex-direction:column"
                >
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option ant-select-item-option-active"
                    title="Parent - line"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      Parent - line
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select:none;-webkit-user-select:none"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option"
                    title="Parent - card"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      Parent - card
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select:none;-webkit-user-select:none"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option"
                    title="Parent - card edit"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      Parent - card edit
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select:none;-webkit-user-select:none"
                      unselectable="on"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      aria-hidden="true"
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <span
        aria-label="down"
        class="anticon anticon-down ant-select-suffix"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    class="ant-select ant-select-single ant-select-show-arrow"
    style="width:200px"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-search"
      >
        <input
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="ant-select-selection-search-input"
          readonly=""
          role="combobox"
          style="opacity:0"
          type="search"
          unselectable="on"
          value=""
        />
      </span>
      <span
        class="ant-select-selection-placeholder"
      />
    </div>
    <div>
      <div
        class="ant-select-dropdown"
        style="opacity:0"
      >
        <div>
          <div
            id="undefined_list"
            role="listbox"
            style="height:0;width:0;overflow:hidden"
          >
            <div
              aria-label="Child - line"
              aria-selected="false"
              id="undefined_list_0"
              role="option"
            >
              line
            </div>
            <div
              aria-label="Child - card"
              aria-selected="false"
              id="undefined_list_1"
              role="option"
            >
              card
            </div>
          </div>
          <div
            class="rc-virtual-list"
            style="position:relative"
          >
            <div
              class="rc-virtual-list-holder"
              style="max-height:256px;overflow-y:auto;overflow-anchor:none"
            >
              <div>
                <div
                  class="rc-virtual-list-holder-inner"
                  style="display:flex;flex-direction:column"
                >
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option ant-select-item-option-active"
                    title="Child - line"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      Child - line
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select:none;-webkit-user-select:none"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option"
                    title="Child - card"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      Child - card
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select:none;-webkit-user-select:none"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option"
                    title="Parent - card edit"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      Parent - card edit
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select:none;-webkit-user-select:none"
                      unselectable="on"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      aria-hidden="true"
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <span
        aria-label="down"
        class="anticon anticon-down ant-select-suffix"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    class="ant-tabs ant-tabs-top"
    items="[object Object],[object Object]"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform:translate(0px, 0px)"
        >
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="null-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="null-more"
          style="visibility:hidden;order:1"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
        <div>
          <div
            class="ant-tabs-dropdown"
            style="opacity:0"
          >
            <ul
              aria-label="expanded dropdown"
              class="ant-tabs-dropdown-menu ant-tabs-dropdown-menu-root ant-tabs-dropdown-menu-vertical"
              data-menu-list="true"
              id="null-more-popup"
              role="listbox"
              tabindex="-1"
            />
            <div
              aria-hidden="true"
              style="display:none"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/position.md extend context correctly 1`] = `
Array [
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
    style="margin-bottom:24px"
  >
    <div
      class="ant-space-item"
      style="margin-right:8px"
    >
      Tab position:
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="ant-radio-group ant-radio-group-outline"
      >
        <label
          class="ant-radio-button-wrapper"
        >
          <span
            class="ant-radio-button"
          >
            <input
              class="ant-radio-button-input"
              type="radio"
              value="top"
            />
            <span
              class="ant-radio-button-inner"
            />
          </span>
          <span>
            top
          </span>
        </label>
        <label
          class="ant-radio-button-wrapper"
        >
          <span
            class="ant-radio-button"
          >
            <input
              class="ant-radio-button-input"
              type="radio"
              value="bottom"
            />
            <span
              class="ant-radio-button-inner"
            />
          </span>
          <span>
            bottom
          </span>
        </label>
        <label
          class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
        >
          <span
            class="ant-radio-button ant-radio-button-checked"
          >
            <input
              checked=""
              class="ant-radio-button-input"
              type="radio"
              value="left"
            />
            <span
              class="ant-radio-button-inner"
            />
          </span>
          <span>
            left
          </span>
        </label>
        <label
          class="ant-radio-button-wrapper"
        >
          <span
            class="ant-radio-button"
          >
            <input
              class="ant-radio-button-input"
              type="radio"
              value="right"
            />
            <span
              class="ant-radio-button-inner"
            />
          </span>
          <span>
            right
          </span>
        </label>
      </div>
    </div>
  </div>,
  <div
    class="ant-tabs ant-tabs-left"
    items="[object Object],[object Object],[object Object]"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform:translate(0px, 0px)"
        >
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="null-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="null-more"
          style="visibility:hidden;order:1"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
        <div>
          <div
            class="ant-tabs-dropdown"
            style="opacity:0"
          >
            <ul
              aria-label="expanded dropdown"
              class="ant-tabs-dropdown-menu ant-tabs-dropdown-menu-root ant-tabs-dropdown-menu-vertical"
              data-menu-list="true"
              id="null-more-popup"
              role="listbox"
              tabindex="-1"
            />
            <div
              aria-hidden="true"
              style="display:none"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-left"
      />
    </div>
  </div>,
]
`;

exports[`renders ./components/tabs/demo/size.md extend context correctly 1`] = `
<div>
  <div
    class="ant-radio-group ant-radio-group-outline"
    style="margin-bottom:16px"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="small"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Small
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="middle"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Middle
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="large"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Large
      </span>
    </label>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-small"
    items="[object Object],[object Object],[object Object]"
    style="margin-bottom:32px"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform:translate(0px, 0px)"
        >
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="null-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="null-more"
          style="visibility:hidden;order:1"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
        <div>
          <div
            class="ant-tabs-dropdown"
            style="opacity:0"
          >
            <ul
              aria-label="expanded dropdown"
              class="ant-tabs-dropdown-menu ant-tabs-dropdown-menu-root ant-tabs-dropdown-menu-vertical"
              data-menu-list="true"
              id="null-more-popup"
              role="listbox"
              tabindex="-1"
            />
            <div
              aria-hidden="true"
              style="display:none"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      />
    </div>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-small ant-tabs-card"
    items="[object Object],[object Object],[object Object]"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform:translate(0px, 0px)"
        >
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="null-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="null-more"
          style="visibility:hidden;order:1"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
        <div>
          <div
            class="ant-tabs-dropdown"
            style="opacity:0"
          >
            <ul
              aria-label="expanded dropdown"
              class="ant-tabs-dropdown-menu ant-tabs-dropdown-menu-root ant-tabs-dropdown-menu-vertical"
              data-menu-list="true"
              id="null-more-popup"
              role="listbox"
              tabindex="-1"
            />
            <div
              aria-hidden="true"
              style="display:none"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/slide.md extend context correctly 1`] = `
<div>
  <div
    class="ant-radio-group ant-radio-group-outline"
    style="margin-bottom:8px"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="top"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Horizontal
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="left"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Vertical
      </span>
    </label>
  </div>
  <div
    class="ant-tabs ant-tabs-top"
    items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    style="height:220px"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform:translate(0px, 0px)"
        >
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="null-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="null-more"
          style="visibility:hidden;order:1"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
        <div>
          <div
            class="ant-tabs-dropdown"
            style="opacity:0"
          >
            <ul
              aria-label="expanded dropdown"
              class="ant-tabs-dropdown-menu ant-tabs-dropdown-menu-root ant-tabs-dropdown-menu-vertical"
              data-menu-list="true"
              id="null-more-popup"
              role="listbox"
              tabindex="-1"
            />
            <div
              aria-hidden="true"
              style="display:none"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      />
    </div>
  </div>
</div>
`;
